# fxdatapi-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  convert.rs  convert_all.rs  currencies.rs  daily_average.rs  historical.rs  lib.rs  margins_spreads.rs  monthly_average.rs  performances.rs  signals.rs  weekly_average.rs
