[package]
name = "currensees"
version = "0.1.0"
authors = ["Finbarrs Oketunji <f@finbarrs.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"