[package]
name = "fxdatapi"
version = "0.1.5"
description = "A Rust library to interact with the Currency API."
authors = ["Finbarrs Oketunji <f@finbarrs.eu>"]
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"